--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,6 +21,6 @@ jobs:
       working-directory: test
       run: dotnet restore
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build test/Interpreter.Test.csproj --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test test/Interpreter.Test.csproj --no-build --verbosity normal
